samples/_failures_safe/1761319919_44a9b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2b3aefb.c: In function ‘main’:
./samples/SAFE/__tmp_e2b3aefb.c:123:8: error: expected ‘;’ at end of input
  123 |     sim
      |        ^
      |        ;
./samples/SAFE/__tmp_e2b3aefb.c:123:5: error: expected declaration or statement at end of input
  123 |     sim
      |     ^~~
